tests/org.eclipse.php.core.tests/workspace/errors/php5/unfinishedInterfaceDecl1.pdtt
--TEST--
Test unfinished interface declaration error reporting
--FILE--
<?php
interface I extends {}
?>
--EXPECT--
[line=2, start=26, end=27] syntax error, unexpected '{', expecting 'identifier'